# the-great-translator

./: Cargo.toml  LICENSE  README.md
src/: json_translation_file.rs  main.rs  parsing.rs  translations.rs
test_data/: TheSidebar.svelte  en.json
