[package]
name = "the-great-translator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.56"
clap = { version = "3.1.6", features = ["derive", "color", "strsim"] }
deepl-api = "0.3.1"
derive_more = "0.99.17"
glob = "0.3.0"
html5ever = "0.25.1"
indexmap = {version = "1.8.0", features = ["serde-1"]}
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.14"
nom = "7.1.0"
pretty_env_logger = "0.4.0"
quick-error = "2.0.1"
rayon = "1.5.1"
regex = "1.5.5"
serde = {version = "1.0.136", features=["derive"]}
serde_json = "1.0.79"
walkdir = "2.3.2"
xmlparser = "0.13.3"
